Fixed Text is taking up too much space in cart

--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -15,6 +15,11 @@
     text-transform: uppercase !important;
     letter-spacing: 0.05em !important;
     color: #121212 !important;
+     /* Handle long text */
+    word-wrap: break-word !important;
+    word-break: break-word !important;
+    hyphens: auto !important;
+    max-width: 100% !important;
 }
 
 .offcanvas-title {
